# xteam-agents

./: .env.example  .gitignore  ADVERSARIAL_AGENTS.md  AGENTS_ARCHITECTURE.md  AGENTS_CONNECTED.md  AGENTS_INDEX.md  AGENTS_README.md  AGENTS_USAGE.md  CHANGELOG.md  CLAUDE.md  DASHBOARD_IMPROVEMENTS.md  DASHBOARD_QUICKSTART.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOMAIN_CONFIG.md  Dockerfile  FINAL_INTEGRATION_SUMMARY.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  INTEGRATION_USAGE.md  MAGIC_IMPLEMENTATION.md  QUICKSTART.md  QUICK_START_NEW_FEATURES.md  README.md  RESEARCH_TEAM_FILES_CREATED.txt  RESEARCH_TEAM_INDEX.md  RESEARCH_TEAM_INTEGRATION.md  RESEARCH_TEAM_PHASE2_COMPLETE.md  RESEARCH_TEAM_QUICK_REF.md  RESEARCH_TEAM_SUMMARY.md  SSOT.md  TEAM_ROSTER.md  TRAEFIK.md  (+5 more)
.trae/documents/: Dashboard Expansion & Agent Visualization.md  Dashboard Maximization Plan.md  QA-Automation-Agent-Instructions.md  QA-Progress-Dashboard-Template.html  QA-Quick-Start-Example.md  SOLO-Builder-QA-Summary.md  Self-Evolution_ Automated Retrospectives.md  Ultra-Modern Dashboard UI & Cartoon Agents.md  Предложения по улучшению MCP сервера xteam-agents.md
dashboard/: Dockerfile  README.md  app.py  requirements.txt
docs/: RESEARCH_TEAM.md
examples/: adversarial_example.py  integrated_execution.py  integrated_execution_simple.py  research_team_usage.py
qa-automation/: package.json
scripts/: healthcheck.py  seed_neo4j.py  seed_postgres.py  setup-traefik.sh
src/xteam_agents/: __init__.py  __main__.py  config.py  orchestrator.py
tests/: conftest.py
tests/e2e/: test_docker_compose.py
tests/integration/: test_graph_full_cycle.py  test_integrated_execution.py  test_mcp_tools.py
tests/unit/: test_graph_nodes.py  test_magic.py  test_memory_manager.py  test_models.py  (+10 more)
(+164 files in other folders)
