[project]
name = "xteam-agents"
version = "0.1.0"
description = "Cognitive Operating System with configurable LLM, multi-backend memory, LangGraph orchestration, and MCP control surface"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "XTeam", email = "team@xteam.dev" }]
keywords = ["mcp", "agents", "langgraph", "cognitive", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.14,<3",
    "langgraph>=0.3,<1",
    "langchain>=0.3,<1",
    "langchain-openai>=0.3,<1",
    "langchain-anthropic>=0.3,<1",
    "langchain-core>=0.3,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "redis>=5.0,<6",
    "qdrant-client>=1.12,<2",
    "neo4j>=5.20,<6",
    "asyncpg>=0.30,<1",
    "httpx>=0.27,<1",
    "structlog>=24.0",
    "uvicorn>=0.30",
    "docker>=7.0,<8",
    "duckduckgo-search>=5.0,<7",
    "beautifulsoup4>=4.12,<5",
    "studyninja-magic-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "testcontainers>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
xteam-agents = "xteam_agents.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xteam_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
